2012-02-23  Greg Billock  <gbillock@google.com>

        Don't clear IntentRequest callback pointers on stop()

        This causes re-entry into ScriptExecutionContext when
        the ActiveDOMCallback objects get deleted, which crashes.
        Instead, just de-activate the object and wait for
        context destruction to clean up.

        Test crashes consistently without fix and passes with fix.
        Added some test infrastructure to support this test.
        https://bugs.webkit.org/show_bug.cgi?id=78638

        Reviewed by Adam Barth.

        * Modules/intents/IntentRequest.cpp:
        (WebCore::IntentRequest::IntentRequest):
        (WebCore::IntentRequest::stop):
        (WebCore::IntentRequest::postResult):
        (WebCore::IntentRequest::postFailure):
        * Modules/intents/IntentRequest.h:
        (IntentRequest):

2012-02-23  Konrad Piascik  <kpiascik@rim.com>

        Upstream BlackBerry Cookie Management Classes
        https://bugs.webkit.org/show_bug.cgi?id=73654

        Reviewed by Rob Buis.

        Added ManualTests/cookieSpeedTest.html as well as tested functionality
        on the BlackBerry port with http://testsuites.opera.com/cookies/
        Passes all non Cookie 2 tests since Cookie 2 is not implemented/supported at this time.
        Error handling and extended tests do not all pass and will be updated with future bugs/patches.

        * platform/blackberry/CookieDatabaseBackingStore/CookieDatabaseBackingStore.cpp: Added.
        * platform/blackberry/CookieDatabaseBackingStore/CookieDatabaseBackingStore.h: Added.
        * platform/blackberry/CookieJarBlackBerry.cpp: Added.
        * platform/blackberry/CookieManager.cpp: Added.
        * platform/blackberry/CookieManager.h: Added.
        * platform/blackberry/CookieMap.cpp: Added.
        * platform/blackberry/CookieMap.h: Added.
        * platform/blackberry/CookieParser.cpp: Added.
        * platform/blackberry/CookieParser.h: Added.