@@ -1,3 +1,15 @@
+2012-02-23  Raymond Toy  <rtoy@google.com>
+
+        Use MathExtras round() in timeToSampleFrame
+        https://bugs.webkit.org/show_bug.cgi?id=79281
+
+        Reviewed by Chris Rogers.
+
+        No new tests. Existing tests cover this change.
+
+        * platform/audio/AudioUtilities.cpp:
+        (WebCore::AudioUtilities::timeToSampleFrame): Use round(). 
+
 2012-02-23  Greg Billock  <gbillock@google.com>
 
         Don't clear IntentRequest callback pointers on stop()
